# intkeet

./: .gitignore  01-SRD.md  02-ARCHITECTURE.md  03-RULES.md  04-PHASES.md  05-DESIGN.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: bootstrap.dart
lib/models/: config_models.dart  conversation.dart
lib/providers/: app_providers.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/services/: overlay_content_channel_test.dart  phase0_core_test.dart  windows_overlay_bridge_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/capture/: display_affinity.cpp  display_affinity.h
windows/content/: block.h  content_model.cpp  content_model.h  markdown_parser.cpp  markdown_parser.h  syntax_highlighter.cpp  syntax_highlighter.h
windows/ffi/: method_channel_handlers.cpp  method_channel_handlers.h  overlay_api.cpp  overlay_api.h
windows/hotkeys/: hotkey_manager.cpp  hotkey_manager.h
windows/logging/: native_log.cpp  native_log.h
windows/native/: animation.cpp  animation.h  clipboard_util.cpp  clipboard_util.h  dpi.cpp  dpi.h  overlay_content_renderer.h  overlay_manager.cpp  overlay_manager.h  overlay_window.cpp  overlay_window.h  (+4 more)
windows/tests/: CMakeLists.txt  content_model_test.cpp  display_affinity_test.cpp  hotkey_manager_test.cpp  markdown_parser_test.cpp  overlay_manager_test.cpp  syntax_highlighter_test.cpp
(+16 files in other folders)
